# GLVU

./: CMakeLists.txt  premake5.lua  readme.md
data/: DebugDraw.fx  DebugDraw.mat  DebugDraw.vs  DeferredLight.fx  DeferredLight.ps  DeferredLight.vs  DeferredLightVolume.ps  FSShader.ps  FSVert.vs  GBuffer.frag  GBuffer.vert  PrepassLight.fx  SolidColor.frag  SolidColor.fx  SolidColor.mat  SolidColor.vert  basic.mat  basic_script.rs  test_inc.h
data/ShaderLib/: FXAA.glsl  PBR.inc  PCF.glsl  ShaderCommon.inc  ShaderLight.inc  Shadow.frag  Shadow.vert  Uniforms.inc
data/SysMaterials/: DebugDraw.fs  ShadowMap.rs
docs/: compare.md  doubts.md  render_loop.md  renderables.md  todo.md
examples/: CMakeLists.txt
examples/FrameworkSample/: CMakeLists.txt  FrameworkApp.h  GameWorld.cpp  GameWorld.h  main.cpp
examples/SampleBase/: CMakeLists.txt  main.cpp
helpers/: AnimatedModel.cpp  AnimatedModel.h  CMakeLists.txt  DearImgui.cpp  DearImgui.h  DebugGeometry.h  EventBus.h  GLFWApp.cpp  GLFWApp.h  GPUResourceCache.h  HeightField.cpp  HeightField.h  InputSystem.cpp  InputSystem.h  ParticleEffect.cpp  ParticleEffect.h  Scene.cpp  Scene.h  TimingSystem.cpp  TimingSystem.h  loose_ptr.h
include/: ArrayTexture.h  Batching.h  Blob.h  Buffer.h  Effect.h  GLHelpers.h  GPUResourceCache.h  Geometry.h  GraphicsDevice.h  GraphicsDeviceHead.h  LightShadow.h  Material.h  Packing.h  RenderGraph.h  RenderScript.h  RenderScript_Types.h  Renderables.h  Renderer.h  ShaderCache.h  ShaderConstants.h  Texture.h  ddsktx.h  glvu.h  glvu_math.h  raymath.h  stb_c_lexer.h  xxhash.hpp
source/: ArrayTexture.cpp  Batching.cpp  Buffer.cpp  Effect.cpp  FormatLoaders.cpp  Geometry.cpp  GraphicsDevice.cpp  GraphicsDeviceHead.cpp  LightShadow.cpp  Material.cpp  Packing.cpp  RenderScript.cpp  RenderScript_Types.cpp  Renderables.cpp  Renderer.cpp  ShaderCache.cpp  Texture.cpp  glvu.cpp  glvu_math.cpp
source/DX11/: DX11Buffer.cpp  DX11Effect.cpp  DX11FrameBuffer.cpp  DX11Geometry.cpp  DX11GraphicsDevice.cpp  DX11GraphicsDeviceHead.cpp  DX11Material.cpp  DX11RenderScript.cpp  DX11StateCache.cpp  DX11StateCache.h  DX11Texture.cpp
source/DX12/: D3D12Util.h  D3D12x.h  DX12AssistanceTypes.cpp  DX12AssistanceTypes.h  DX12Buffer.cpp  DX12DescriptorManagement.cpp  DX12DescriptorManagement.h  DX12Geometry.cpp  DX12GraphicsDevice.cpp  DX12Texture.cpp
source/GL/: GLBuffer.cpp  GLEffect.cpp  GLFrameBuffer.cpp  GLGeometry.cpp  GLGraphicsDevice.cpp  GLGraphicsDeviceHead.cpp  GLMaterial.cpp  GLRenderScript.cpp  GLTexture.cpp
source/Vulkan/: VKBuffer.cpp  VKEffect.cpp  VKFrameBuffer.cpp  VKGeometry.cpp  VKGraphicsDevice.cpp  VKGraphicsDeviceHead.cpp  VKMaterial.cpp  VKRenderScript.cpp  VKTexture.cpp
